--- a/src/components/Works.css
+++ b/src/components/Works.css
@@ -34,13 +34,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: grayscale(100%);
+  /* filter: grayscale(100%); */
   transition: filter 0.3s ease, transform 0.3s ease;
   transform: scale(1);
 }
 
 .image-container img:hover {
-  filter: grayscale(0%);
+  /* filter: grayscale(0%); */
   transform: scale(1.05);
 }
 
